# yolo-frigate

./: README.md  coral-tpu.Dockerfile  intel-gpu.Dockerfile  labelmap.txt  main.py  nvidia-trt.Dockerfile  onnx-gpu.Dockerfile  prediction_saver.py  pyproject.toml
.github/workflows/: docker.yml  publish.yml
docker/: tflite.Dockerfile
src/yolo_frigate/: app.py  calibration_dataset.py  config.py  detector_backend.py  detector_factory.py  label.py  model_artifact.py  openvino_detector.py  runtime_profile.py  ultralytics_detector.py  ultralytics_support.py
tests/: test_app.py  test_calibration_dataset.py  test_detector_factory.py  test_model_artifact.py  test_onnx_detector.py  test_openvino_detector.py  test_parse_labels.py
