[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yolo-frigate"
version = "0.2.7"
description = "yolo-frigate: DeepStack-shaped REST API for YOLO object detection with lazy runtime-native export"
readme = "README.md"
requires-python = ">=3.11"
license = "AGPL-3.0-only"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "numpy>=1.23.2,<2",
    "opencv-python-headless>=4.11.0,<4.12",
    "pyyaml",
    "python-multipart",
    "pydantic>=2",
]

[project.optional-dependencies]
tensorrt = [
    "ultralytics; platform_system == 'Linux'",
    "onnx>=1.12.0,<2.0.0; platform_system == 'Linux'",
    "onnxslim>=0.1.71; platform_system == 'Linux'",
    "onnxruntime-gpu; platform_system == 'Linux'",
]
tflite = [
    "tflite-runtime==2.14.0",
    "tensorflow-cpu; platform_system == 'Linux'",
    "ultralytics; platform_system == 'Linux'",
]
openvino = [
    "openvino",
    "ultralytics; platform_system == 'Linux'",
]
onnx-gpu = [
    "ultralytics; platform_system == 'Linux'",
    "onnx>=1.12.0,<2.0.0; platform_system == 'Linux'",
    "onnxslim>=0.1.71; platform_system == 'Linux'",
    "onnxruntime-gpu; platform_system == 'Linux'",
]

[project.urls]
Repository = "https://github.com/a-earthperson/yolo-frigate"

[project.scripts]
yolo-frigate = "yolo_frigate.main:run"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = ["httpx", "pytest", "pytest-cov", "ruff", "black"]

[tool.ruff]
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.black]
target-version = ["py311"]
